--- a/Module2Asignment/css.css
+++ b/Module2Asignment/css.css
@@ -1,4 +1,3 @@
-
 	/********** Base styles **********/
 	* {
 		box-sizing: border-box;
@@ -18,50 +17,44 @@
 		color: black;
 		text-align: left;
 		clear:left;
-	  padding-bottom: 20px;
+		padding-bottom: 20px;
 	}
 
 
 	h1{
 		text-align: center;
 		padding-top: 10px;
-	  font: 75%;
+		font: 75%;
 
 	}
 	
 	h3{
-    font: 25%;
+		font: 25%;
 		border: 1px solid black;
 		float: right;
 		text-align: center;
-    padding-top: 0px;
+		padding-top: 0px;
 	}
 
 	#P1title{
 		background-color: lightpink;
 		width: 35%;
-		right: 50%;
-		top: -1%;
 		
 	}
 	#P2title{
 		background-color:FireBrick;
 		color: white;
-		right: 5%;
-		top: -1%;
 		width: 35%;
 	}
 	#P3title{
 		background-color:	#F5DEB3;
-		right: 5%;
-		top: -1%;
 		width: 35%;
 	}
 	
 	.row{
 		width: 100%;
 		margin-bottom: 0px;
-		
+
 	}
 /*large devices*/
 
@@ -72,8 +65,9 @@
 		
 		margin-right: 0px;
 		margin-left: 0px;
-    padding-left: 20px;
+		padding-left: 20px;
 		padding-right: 20px;
+		position: relative;
 
 	}
 	.col-lg-1 {
@@ -116,16 +110,16 @@
 }
 
 @media(min-width: 768px) and (max-width: 991px) 
- {
+{
 
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
 		float: left;
 		padding-top: 0px;
 		margin-right: 0px;
 		margin-left:0px ;
-	
-    margin-bottom: 0px;
-  	padding-left: 20px;
+		position: relative;
+		margin-bottom: 0px;
+		padding-left: 20px;
 		padding-right: 20px;
 	}
 	.col-md-1 {
@@ -175,11 +169,11 @@
 		float: left;
 		padding-left: 20px;
 		padding-right: 20px;
-	
 		padding-top: 0px;
 		margin-top: 0px;
 		margin-right: 0px;
 		margin-left: 0px;
+		position: relative;
 	}
 	.col-sm-1{
 		width: 8.33%;
